# lebron

./: Cargo.toml  Makefile  build_rpi.sh  process_assets.sh  sim.sh
assets/: eepy.tga  face.tga  idle.tga  idle_to_eepy.tga  startup.raw  startup.tga
core/: Cargo.toml
core/src/: lib.rs
firmware/: Cargo.toml
firmware/src/: display.rs
sim/: Cargo.toml
src/: animation.rs  lib.rs  main.rs
