[package]
name = "lebron"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.4.1"
rppal = { version = "0.22.1", features = ["hal"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
embedded-graphics-simulator = "0.8.0"
