[package]
edition      = "2024"
name         = "lebron-firmware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "lebron-firmware"
path = "./src/bin/main.rs"

[dependencies]
lebron-core = { path = "../core" }
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

critical-section = "1.2.0"
esp-println      = { version = "0.16.1", features = ["esp32s3", "log-04"] }
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
